# jllama

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/: Dockerfile  release_jllama.sh
.github/workflows/: gradle.yml  jllama_build_execute.yml  linux.yml  macos.yml  publish_jllama_build.yml  windows.yml
buildSrc/src/main/groovy/: Architectures.groovy  Classifiers.groovy  CompilerOs.groovy  Compilers.groovy  Toolchains.groovy
docker/jllama-build/: Dockerfile  release_jllama.sh
docker/jllama-test-windows/: Dockerfile  hello.ps1
jni-bindings/: build.gradle
jni-bindings/src/main/java/com/mangomelancholy/llama/cpp/java/bindings/: Detokenizer.java  LlamaContextParams.java  LlamaCpp.java  LlamaCppJNIImpl.java  LlamaCppManager.java  LlamaLogLevel.java  LlamaManager.java  LlamaManagerJNIImpl.java  LlamaOpaqueContext.java  LlamaOpaqueModel.java  LlamaTokenData.java  LlamaTokenDataArray.java  Main.java
jni-bindings/src/main/java/com/mangomelancholy/llama/cpp/java/bindings/exceptions/: DynamicLibraryException.java  JNIException.java  LlamaCppException.java
jni-bindings/src/main/java/com/mangomelancholy/llama/cpp/java/bindings/runner/: Detokenizer.java  Main.java
jni-bindings/src/main/java/net/jllama/api/: Batch.java  BatchConfigurer.java  Context.java  ContextConfigurer.java  EmbeddingSequence.java  FluentBatch.java  Llama.java  Model.java  ModelConfigurer.java  Sampler.java  Sequence.java  TokenSequence.java  Tokenizer.java  Tokens.java
jni-bindings/src/main/java/net/jllama/api/batch/: Batch.java  BatchConfigurer.java  BatchManager.java  BatchResolver.java  BatchSpecifier.java
jni-bindings/src/main/java/net/jllama/api/exceptions/: LlamaApiException.java  MissingParameterException.java
jni-bindings/src/main/java/net/jllama/api/util/: ByteUtil.java  FloatUtil.java  IntegerUtil.java
jni-bindings/src/main/java/net/jllama/core/: GgmlType.java  LlamaBatch.java  LlamaContext.java  LlamaContextParams.java  LlamaCpp.java  LlamaLogLevel.java  LlamaModel.java  LlamaModelParams.java  LlamaTokenData.java  LlamaTokenDataArray.java  Sequence.java
jni-bindings/src/main/java/net/jllama/core/exceptions/: DynamicLibraryException.java  JNIException.java  LlamaCppException.java  ResourceNotFoundException.java
jni-bindings/src/main/java/net/jllama/core/util/: DllExtractor.java
jni-bindings/src/main/java/net/jllama/llama/cpp/java/bindings/: LlamaBatch.java  LlamaContext.java  LlamaContextParams.java  LlamaCpp.java  LlamaCppJNIImpl.java  LlamaCppManager.java  LlamaLogLevel.java  LlamaModel.java  LlamaModelParams.java  LlamaOpaqueContext.java  LlamaOpaqueModel.java  LlamaTokenData.java  LlamaTokenDataArray.java  Sequence.java
jni-bindings/src/main/java/net/jllama/llama/cpp/java/bindings/exceptions/: DynamicLibraryException.java  JNIException.java  LlamaCppException.java  ResourceNotFoundException.java
jni-bindings/src/main/java/net/jllama/llama/cpp/java/bindings/runner/: Detokenizer.java  Main.java
jni-bindings/src/main/java/net/jllama/llama/cpp/java/bindings/util/: DllExtractor.java
jni-bindings/src/test/groovy/net.jllama.api/: ContextTokenFlowSpec.groovy
jni-implementation/: build.gradle
jni-implementation/src/: CMakeLists.txt  linux-x64-gcc-toolchain.cmake  macos-aarch64-clang-toolchain.cmake  macos-arm64-clang-toolchain.cmake  macos-arm64-gcc-toolchain.cmake  macos-linux-aarch64-clang-toolchain.cmake  macos-linux-arm64-clang-toolchain.cmake  windows-gcc-toolchain.cmake  windows-linux-mingw-toolchain.cmake  windows-mingw-toolchain.cmake  windows-msvc-toolchain.cmake
jni-implementation/src/main/cpp/: CMakeLists.txt  LlamaContextParamsManager.cpp  LlamaContextParamsManager.h  Utf8StringManager.cpp  Utf8StringManager.h  batch_bridge.cpp  bridge.cpp  context_bridge.cpp  j_classes_consts.h  jni.cpp  jni.h  libloader.h  libloader_unixlike.cpp  libloader_windows.cpp  library.cpp  model_bridge.cpp
jni-implementation/src/main/cpp/exceptions/: LlamaCppException.h  dynamic-library-exception.h  exceptions.h
jni-implementation/src/main/cpp/handler/: LlamaContextParamsManager.cpp  LlamaContextParamsManager.h  LlamaManager.cpp  LlamaManager.h  LlamaModelParamsManager.cpp  LlamaSession.cpp  LlamaSession.h
src/main/java/com/mangomelancholy/llama/cpp/java/bindings/: Main.java
test-runner/: build.gradle
test-runner/src/main/java/net/jllama/llama/cpp/java/bindings/runner/: Main.java
test-runner/src/main/resources/: log4j2.yaml
